--- a/zet/manifest.json
+++ b/zet/manifest.json
@@ -8,12 +8,12 @@
     "theme_color": "#000000",
     "icons": [
       {
-        "src": "/zet.jpg",
+        "src": "zet.jpg",
         "sizes": "192x192",
         "type": "image/jpg"
       },
       {
-        "src": "/zet.jpg",
+        "src": "zet.jpg",
         "sizes": "512x512",
         "type": "image/jpg"
       }
