--- a/zet/manifest.json
+++ b/zet/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "ZET БАНК",
+    "name": "ZET BANK",
     "short_name": "ZET",
     "description": "Банковское приложение Zet",
     "start_url": "/",
