--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "ZET BANK",
-    "short_name": "ZET",
+    "short_name": "ZET БАНК",
     "description": "Банковское приложение Zet",
-    "start_url": "/",
+    "start_url": "https://whiteedev.github.io/zetwallet/",
     "display": "standalone",
     "background_color": "#1f0444",
     "theme_color": "#000000",
