--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "ZET",
+    "name": "Zet Wallet",
     "short_name": "ZET",
     "description": "Электронный кошелек Zet",
     "start_url": "/",
